# doq

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cpp-build.yml
src/: doq.hpp
src/include/: document.hpp  posting_list.hpp  soundex.hpp  term_matrix.hpp  term_matrix_unit.hpp  wildcard.hpp
src/include/indexing_policy/: vanilla_indexer.hpp
src/include/indexing_policy/listing_policy/: vanilla_indexer_listing.hpp
src/include/posting_policy/: vanilla_poster.hpp  vanilla_posting.hpp
src/include/tokenization_policy/: vanilla_tokenizer.hpp
tests/: CMakeLists.txt  document_test.cpp  main.cpp  posting_list_test.cpp  soundex_text.cpp  term_matrix_test.cpp  term_matrix_unit_test.cpp  vanilla_indexer_listing_test.cpp  vanilla_poster_test.cpp  vanilla_posting_test.cpp  vanilla_tokenization_test.cpp  wildcard_test.cpp
tests/data/: a_midsummer_nights_dream.txt  document_test.txt  hamlet.txt  macbeth.txt  othello.txt  romeo_and_juliet.txt  the_tempest.txt
